--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ h1 {
   margin-bottom: 25px;
   text-align: center;
   font-size: 3rem;
+  font-style: italic;
 }
 
 .choice-result {
@@ -29,8 +30,16 @@ h1 {
   margin-bottom: 20px;
 }
 
+.report {
+  color: white;
+  font-size: 1.5rem;
+  margin-top: 60px;
+  text-align: center;
+}
+
 .button-game {
   text-align: center;
+  margin-top: 10px;
 }
 .button-game .rock-image {
   width: 50px;
@@ -53,12 +62,15 @@ h1 {
   height: auto;
 }
 .button-game button {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   margin-top: 30px;
-  margin-left: 15px;
+  margin-left: 25px;
   padding: 0.5rem 1rem;
   border-radius: 10px;
   border: none;
   background-color: #2E67F8;
   color: white;
+}
+.button-game button:hover {
+  opacity: 0.8;
 }/*# sourceMappingURL=styles.css.map */
