--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1 {
   text-align: center;
   color: white;
   font-size: 1.5rem;
-  line-height: 3.5rem;
+  line-height: 3rem;
 }
 .choice-result .computer-choice {
   margin-top: 70px;
@@ -35,6 +35,7 @@ h1 {
   font-size: 1.5rem;
   margin-top: 60px;
   text-align: center;
+  line-height: 3rem;
 }
 
 .button-game {
@@ -73,4 +74,28 @@ h1 {
 }
 .button-game button:hover {
   opacity: 0.8;
+}
+
+@media all and (min-width: 370px) and (max-width: 500px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  .choice-result {
+    font-size: 1.2rem;
+  }
+  .choice-result .computer-choice {
+    margin-top: 50px;
+  }
+  .report {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    margin-top: 40px;
+  }
+  .button-game button {
+    display: inline-block;
+    font-size: 1rem;
+    margin-left: 15px;
+    margin-right: 15px;
+    align-items: center;
+  }
 }/*# sourceMappingURL=styles.css.map */
