--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,29 @@ h1 {
 
 @media all and (min-width: 370px) and (max-width: 500px) {
   h1 {
+    font-size: 2rem;
+  }
+  .choice-result {
+    font-size: 1.2rem;
+  }
+  .choice-result .computer-choice {
+    margin-top: 50px;
+  }
+  .report {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    margin-top: 40px;
+  }
+  .button-game button {
+    display: inline-block;
+    font-size: 1rem;
+    margin-left: 15px;
+    margin-right: 15px;
+    align-items: center;
+  }
+}
+@media all and (min-width: 501px) and (max-width: 620px) {
+  h1 {
     font-size: 2.2rem;
   }
   .choice-result {
@@ -87,15 +110,15 @@ h1 {
     margin-top: 50px;
   }
   .report {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     margin-bottom: 20px;
     margin-top: 40px;
   }
   .button-game button {
     display: inline-block;
     font-size: 1rem;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
     align-items: center;
   }
 }/*# sourceMappingURL=styles.css.map */
