--- a/styles.scss
+++ b/styles.scss
@@ -96,6 +96,41 @@ button:hover {
 @media all and (min-width: 370px) and (max-width: 500px)  {
 
     h1 {
+        font-size: 2rem;
+    }
+
+    .choice-result {
+        font-size: 1.2rem;
+
+        .computer-choice {
+            margin-top: 50px;
+        }
+    }
+
+    .report {
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+        margin-top: 40px;
+    }
+
+    .button-game {
+
+    button {
+        display: inline-block;
+        font-size: 1rem;
+        margin-left: 15px;
+        margin-right: 15px;
+        align-items: center;
+        
+    }
+}
+
+
+}
+
+@media all and (min-width: 501px) and (max-width: 620px)  {
+
+    h1 {
         font-size: 2.2rem;
     }
 
@@ -108,7 +143,7 @@ button:hover {
     }
 
     .report {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         margin-bottom: 20px;
         margin-top: 40px;
     }
@@ -118,8 +153,8 @@ button:hover {
     button {
         display: inline-block;
         font-size: 1rem;
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 20px;
+        margin-right: 20px;
         align-items: center;
         
     }
