Media queries margin-top:20px

--- a/styles.scss
+++ b/styles.scss
@@ -96,6 +96,7 @@ button:hover {
 @media all and (min-width: 370px) and (max-width: 500px)  {
 
     h1 {
+        margin-top: 20px;
         font-size: 2rem;
     }
 
@@ -131,6 +132,7 @@ button:hover {
 @media all and (min-width: 501px) and (max-width: 620px)  {
 
     h1 {
+        margin-top: 20px;
         font-size: 2rem;
     }
 
